--- a/footer.css
+++ b/footer.css
@@ -15,7 +15,7 @@
 }
 
 .c1 {
-    background-color: #dddddd;
+    background-color: #e8e8ec;
     margin: auto;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
